syntax = "proto3";

option csharp_namespace = "HermesGrpc";

package hermes;

service Hermes {
    rpc Set (Pair) returns (Empty);
    rpc Get (Key) returns (Pair);
    rpc DeleteKey (Key) returns (Empty);
    rpc DeletePath (Key) returns (Empty);
    rpc ListKeys (Key) returns (KeyList);
}

message Key {
    string key = 1;
}

message Empty {}

message Pair {
    string key = 1;
    string value = 2;
}

message KeyList {
    repeated string keys = 1;
}
